--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="deleteTextSubText">Are you sure? Deleting this text will not affect the words you have highlighted.</string>
     <string name="yes">Yes</string>
     <string name="cancel">Cancel</string>
+    <string name="translation_loading">translation loading...</string>
 </resources>
